--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-content{
+   --background: #f8f8f8 ;
+}
+
+ion-toolbar{
+   --backgound: rgba(0,0,0,0)
+}
